# parallelprogramming

./: .gitignore  README.md
lab1/: CMakeLists.txt  lab1.xlsx  report.md
lab1/include/: Matrix.h
lab1/pythontest/: test.py
lab1/src/: MatrixTests.cc
lab1/tests/: a100.txt  a1000.txt  a200.txt  a300.txt  a500.txt  a600.txt  a700.txt  a800.txt  a900.txt  b100.txt  b1000.txt  b200.txt  b300.txt  b400.txt  b500.txt  b600.txt  b700.txt  b800.txt  b900.txt  c100.txt  c200.txt  c300.txt  c400.txt  c500.txt  c600.txt  c700.txt
lab2/: lab2.xlsx  report.md
lab3/: lab3.xlsx  report.md
lab4/: lab4.xlsx  report.md
